# cli-encrypt-txt

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
cli_encrypt_txt/: __main__.py
